infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-depl
  template:
    metadata:
      labels:
        app: comments-depl
    spec:
      containers:
        - name: comments-depl
          image: keysoutsourcedocker/basics-comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments-depl
  type: ClusterIP
  ports:
    - name: comments-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
