infra/k8s/messenger-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messenger-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messenger-depl
  template:
    metadata:
      labels:
        app: messenger-depl
    spec:
      containers:
        - name: messenger-depl
          image: keysoutsourcedocker/basics-messenger
---
apiVersion: v1
kind: Service
metadata:
  name: messenger-srv
spec:
  selector:
    app: messenger-depl
  type: ClusterIP
  ports:
    - name: messenger-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
