infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-depl
  template:
    metadata:
      labels:
        app: posts-depl
    spec:
      containers:
        - name: posts-depl
          image: keysoutsourcedocker/basics-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  selector:
    app: posts-depl
  type: ClusterIP
  ports:
    - name: posts-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
