infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-depl
  template:
    metadata:
      labels:
        app: query-depl
    spec:
      containers:
        - name: query-depl
          image: keysoutsourcedocker/basics-query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query-depl
  type: ClusterIP
  ports:
    - name: query-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
