infra/k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-depl
  template:
    metadata:
      labels:
        app: server-depl
    spec:
      containers:
        - name: server-depl
          image: keysoutsourcedocker/node-web-app:latest
---
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  selector:
    app: server-depl
  type: ClusterIP
  ports:
    - name: server-srv
      protocol: TCP
      port: 3000
      targetPort: 3000
