infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: basics.com
      http:
        paths:
          - path: /api/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 3000
          - path: /api/comments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 3000
          - path: /api/query/?(.*)
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 3000
          - path: /ws/?(.*)
            pathType: Prefix
            backend:
              service:
                name: messenger-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-srv
                port:
                  number: 3000
